Web page updated. W³ Validator removed.

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -66,20 +66,20 @@
           </th>
           <td style="vertical-align: top; text-align: left;">
             Directly using Python code in a grid is a core feature of pyspread.
-            The target user group has experience with or wants to learn the 
+            The target user group has experience with or wants to learn the
             programming language Python:<p>
             <ul>
                 <li>Peter regularly documents layout planning projects. He already has
                     a large base of Python code for doing calculations in
                     this task. Peter has to provide project documentation in pdf files
                     with a consistant layout. In the documentation, he has to visualize
-                    building layouts and calculation charts. 
-                <li>Clara is a research engineer and wants to quickly create
-                    publication ready figures for her publications. She is proficient
-                    with Python and wants to combine the flexibility of matplotlib 
-                    with the ease of use of a spreadsheet.
+                    building layouts and calculation charts.
+                <li>Clara is a research engineer and wants to quickly create presentations
+                    and posters with a consistent layout and publication ready figures for
+                    her publications.
+                    She is proficient with Python and uses it for her scientific analyses.
             </ul>
-            Not part of the target user group of Dolphin are Donna and Jack: 
+            Not part of the target user group of Dolphin are Donna and Jack:
             <ul>
                 <li>Donna is looking for a free replacement for Ms. Excel.
                     She does not know any programming language.
@@ -88,9 +88,9 @@
                     tool.
             </ul>
             This does not mean that Donna or Jack cannot work with pyspread. However,
-            Donna might find using Python code too hard. Jack on the other hand might
-            be disappointed because his long running tasks are likely to lock up
-            pyspread.
+            Donna might find the larning curve for using Python code in cells too steep.
+            Jack on the other hand might be disappointed because his long running tasks
+            are likely to lock up pyspread.
           </td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -178,5 +178,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 14. December
+      </span> <span style="font-style: italic;">Last changed: 27. December
         2014</span></p>
