--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -162,5 +162,4 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 17.
-        December 2014</span></p>
+      </span> <span style="font-style: italic;">Last changed: 27. December 2014</span></p>
