--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 <meta name="keywords" content="pyspread, spreadsheet, python, python
       spreadsheet, numpy, wxpython, csv, data mining">
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+<meta name=viewport content="width=device-width, initial-scale=1">
 
 <style type="text/css">
     body
@@ -47,8 +48,8 @@
         text-align: justify;
         line-height: 1.3em;
     }
-    
-    
+
+
     a:link, a:visited, a:active, a:hover
     {
         text-decoration:underline;
@@ -97,5 +98,5 @@
     padding:5px 15px;
     color:#000000;
     }
-    
+
 </style>
