--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
       spreadsheet, numpy, wxpython, csv, data mining">
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <meta name=viewport content="width=device-width, initial-scale=1">
+<meta http-equiv="expires" content="100000">
 
 <style type="text/css">
     body
