Header adjusted to gzipped images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Title -->
 <div style="float: left; width: 80px; height: 80px;"><img
-    src="images/pyspread.png" style="margin-left: 15px;
+    src="images/pyspread.png.gz" style="margin-left: 15px;
     margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
     width="44"></div>
 <div style="width: 400px; height: 80px;">
