Browser icon added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
       spreadsheet, numpy, wxpython, csv, data mining">
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <meta name=viewport content="width=device-width, initial-scale=0.75">
+<link rel="icon" type="image/png" href="images/pyspread_icon.png">
 
 <style type="text/css">
     body
