--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,11 @@
 <meta name=viewport content="width=device-width, initial-scale=0.75">
 <link rel="icon" type="image/png" href="images/pyspread_icon.png">
 
+<!--[if IE]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+
 <style type="text/css">
     body
     {
