--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,11 +20,61 @@
         background-color:#ffffff;
     }
 
+    h1, p, ul {
+        font-size:12pt;
+        margin-right: 220px;
+    }
+
+
+    h1 {
+        font-family: Arial,Helvetica,sans-serif;
+        font-size: 2em;
+        font-weight: bold;
+        width:140px;
+        text-decoration: overline;
+    }
+
+    p {
+        text-align:justify;
+        position: relative;
+        left:140px;
+        padding-right:140px;
+    }
+
+    ul {
+        text-align:justify;
+        position: relative;
+        left:120px;
+        padding-right:120px;
+    }
+
+    p.one_line_heading, ul.one_line_heading {
+        top:-2.1em;
+    }
+
+    p.impressum {
+        font-size:10pt;
+        font-style: italic;
+        text-align:left;
+    }
+
+    aside {
+        line-height: 15em;
+        display: block;
+        background-color: yellow;
+        width: 220px;
+        text-align: right;
+        float: right;
+    }
+
+
+<!--
+
     h1: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
-    }
+    }-->
     h2: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 1em;
@@ -38,6 +88,7 @@
         text-align: left;
         font-size: 1em;
     }
+
     th {
         font-size: large;
         font-weight: bold;
