--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,13 +66,12 @@
     }
 
 
-<!--
 
-    h1: {
+    title: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
-    }-->
+    }
     h2: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 1em;
