--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,6 +71,7 @@
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
+        text-decoration: plain;
     }
     h2: {
         font-family: Arial,Helvetica,sans-serif;
