--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
         font-family: Arial,Helvetica,sans-serif;
         font-weight: bold;
         width:140px;
+        text-transform: lowercase;
         text-decoration: overline;
     }
 
@@ -65,13 +66,11 @@
         float: right;
     }
 
-
-
     title: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
-        text-decoration: plain;
+        text-decoration:none;
     }
     h2: {
         font-family: Arial,Helvetica,sans-serif;
