--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
         font-family: Arial,Helvetica,sans-serif;
         font-weight: bold;
         width:140px;
+        text-transform: lowercase;
         text-decoration: overline;
     }
 
@@ -64,8 +65,6 @@
         text-align: right;
         float: right;
     }
-
-
 
     title: {
         font-family: Arial,Helvetica,sans-serif;
