--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
     width="44"></div>
 <div style="width: 400px; height: 80px;">
-    <h1 id="title">pyspread</h1>
+    <h1 class="title" id="title">pyspread</h1>
     Python power for your tables
 </div>
 
