--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,7 +66,7 @@
         float: right;
     }
 
-    title: {
+    h1.title: {
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
