--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,6 +70,8 @@
         font-family: Arial,Helvetica,sans-serif;
         font-size: 2em;
         font-weight: bold;
+        width:100%;
+        text-decoration: none;
     }
     h2: {
         font-family: Arial,Helvetica,sans-serif;
