--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -1,165 +1,219 @@
-    <table style="text-align: left; width: 100%; margin-left: auto;
-      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
-      <tbody>
-        <tr>
-          <th style="vertical-align: top; background-color: white;
-            width: 102px;">source </th>
-          <td style="vertical-align: top;">These instructions are for
-            installing the source tarball<br>
-            <br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">pyspread
-              v0.4</a>.<br>
-            <br>
-            Installation:<br>
-            <ol>
-              <li>Ensure that <span style="text-decoration: underline;">all</span>
-                dependencies are installed.<br>
-                <br>
-              </li>
-              <li>Unpack the tarball<tt> </tt><br>
-                <br>
-              </li>
-              <li>cd to the extraction directory <br>
-                <br>
-              </li>
-              <li>Type in <br>
-                <tt>python setup.py install</tt></li>
-            </ol>
-          </td>
-          <td style="width: 211px;"></td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">linux</th>
-          <td style="vertical-align: top;"> The following distributions
-            provide pyspread as a package (latest release linked):<br>
-            <br>
-            <table style=" text-align: left; width: 325px;" border="0"
-              cellpadding="4" cellspacing="0">
-              <tbody>
-                <tr>
-                  <td style="text-align: center;"><img style=" width:
-                      24px; height: 24px;" alt="Arch logo"
-                      src="http://manns.github.io/pyspread/images/arch-logo-small.png"
-                      align="middle"><br>
-                  </td>
-                  <td style="text-align: left;">Arch</td>
-                  <td><a
-                      href="https://aur.archlinux.org/packages/pyspread/">pyspread
-                      v0.3.2</a><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="text-align: center;"><img style=" width:
-                      20px; height: 24px;" alt="Debian logo"
-                      src="http://manns.github.io/pyspread/images/debian-logo-small.png"
-                      align="middle"></td>
-                  <td style="text-align: left;">Debian</td>
-                  <td><a
-                      href="https://packages.debian.org/de/sid/pyspread">pyspread
-                      v0.3.3</a></td>
-                </tr>
-                <tr>
-                  <td style="text-align: center;"><img style=" width:
-                      23px; height: 24px;" alt="Mageia logo"
-                      src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
-                      align="middle"></td>
-                  <td style=" text-align: left;">Mageia</td>
-                  <td><a
-href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
-                      v0.3.3</a></td>
-                </tr>
-                <tr>
-                  <td style="text-align: center;"><img style=" width:
-                      24px; height: 24px;" alt="Slackware logo"
-                      src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
-                  </td>
-                  <td style="text-align: left;">Slackware</td>
-                  <td><a
-                      href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
-                      v0.3.2</a></td>
-                </tr>
-                <tr>
-                  <td style="vertical-align: top; text-align: center;"><img
-                      style=" width: 24px; height: 24px;" alt="Ubuntu
-                      logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
-                      align="middle"></td>
-                  <td style="vertical-align: top;">Ubuntu</td>
-                  <td style="vertical-align: top;"><a
-                      href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
-                      v0.3.3</a></td>
-                </tr>
-              </tbody>
-            </table>
-            <br>
-            For these distributions, the easiest way is to install
-            pyspread from the repositories. The source distribution can
-            also be used e.g. if the packaged version is outdated.<br>
-          </td>
-          <td style="width: 211px;"></td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">windows<br>
-          </th>
-          <td style="vertical-align: top;">For Windows, please
-            follow these instructions. In order to make Windows
-            installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
-            <ol>
-              <li>Download and install Python, numpy and matplotlib.
-                You can find 32bit and 64bit packages of WinPython <a
-                  href="http://winpython.sourceforge.net/">here</a>.
-                Make sure to get the Python2 version.
-                If WinPython is used then the WinPython control panel is recommended for all installations.<br> <br>
-              </li>
-              <li>Download and install Cairo and pycairo. Working binaries are available <a
-                  href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by maunually copying it. Make sure to read the installation instructions.<br>
-                <br>
-              </li>
-              <li>Download and install <a
-                  href="http://www.wxpython.org/download.php#stable">wxPython 2.8.x</a>.<br>
-                <br>
-              </li>
-              <li>Download and install gnupg (<a
-                  href="http://www.gpg4win.org/">Gpg4win</a> supports
-                32&amp;64bit)<br>
-                <br>
-              </li>
-              <li>Download and install <a
-                  href="http://pythonhosted.org/python-gnupg/#download">python-gnupg</a>.<br>
-                <br>
-                For&nbsp; <span style="font-weight: bold;">32 bit
-                  systems</span>, an exe installer
-                (python-gnupg-0.3.4.win32.exe) is provided on the linked
-                page.<br>
-                <br>
-                For <span style="font-weight: bold;">64 bit systems</span>,
-                the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
-                to be extracted (e. g. with 7zip) and installed as
-                follows:<br>
-                <br>
-              </li>
-              <li>Download and install the source distribution of pyspread<br>
-                <br>
-              </li>
-              <li>Start pyspread by double-clicking on the file
-                pyspread.bat in the extraction directory</li>
-            </ol>
-          </td>
-          <td style="width: 211px;"></td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">os/x<br>
-          </th>
-          <td style="vertical-align: top;">Pyspread is not officially
-            supported on OS/X.<br>
-            However, the source distribution has been reported to work.<br>
-          </td>
-          <td style="width: 211px;"></td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
-    <p><span style="font-style: italic;">Copyright Martin Manns<br>
-        Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
-          style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 27. December 2014</span></p>
+<aside>
+</aside>
+
+
+<h1>Dependencies</h1>
+
+<p class="one_line_heading">
+Pyspread works on Linux and other GTK platforms as well as on Windows.
+While there have been reports that pyspread can be used on OSX as well,
+OSX is currently unsupported.
+Pyspread requires the following software to be installed:
+</p>
+<ul class="one_line_heading">
+  <li> <a href="http://www.python.org/">Python</a>
+    (&gt;=2.7, &lt;3.0) </li>
+  <li> <a href="http://www.numpy.org/">numpy</a>
+    (&gt;=1.1.0) </li>
+  <li> <a href="http://www.wxpython.org/">wxPython</a>
+    (&gt;=2.8.10.1, Unicode version required) </li>
+  <li> <a href="http://matplotlib.org/">matplotlib</a>
+    (&gt;=1.1.1)</li>
+  <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
+    (&gt;=1.8.8)</li>
+</ul>
+<p class="one_line_heading">
+The following optional dependencies improve user experience:
+</p>
+<ul class="one_line_heading">
+  <li> <a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
+    (&gt;=0.3.0, for opening own files without approval) <br>
+  </li>
+  <li> <a href="http://www.python-excel.org/">xlrd</a>
+    (&gt;=0.9.2, for loading Excel<sup>&reg;</sup> files)</li>
+  <li><a href="http://www.python-excel.org/">xlwt</a>
+    (&gt;=0.9.2, for saving Excel<sup>&reg;</sup> files)</li>
+  <li><a href="http://jedi.jedidjah.ch">jedi</a>
+    (&gt;=0.8.0, for tab completion and context help in the
+    entry line)</li>
+  <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
+    (&gt;=2.32, for displaying SVG files in cells)</li>
+  <li><a href="http://matplotlib.org/basemap/">basemap</a>
+    (&gt;=1.0.7, for the weather example pys file)<br>
+  </li>
+</ul>
+
+
+<h1>Source</h1>
+
+<p class="one_line_heading">
+
+  These instructions are for installing the source tarball
+  <br>
+  <a href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">pyspread v0.4</a>.
+  <br> <br>
+  Installation:
+  <br>
+  <ol>
+    <li>
+      Ensure that <span style="text-decoration: underline;">all</span>
+      dependencies are installed.
+      <br> <br>
+    </li>
+    <li>
+      Unpack the tarball
+      <br> <br>
+    </li>
+    <li>
+      cd to the extraction directory
+      <br> <br>
+    </li>
+    <li>
+      Type in
+      <br>
+      <tt>python setup.py install</tt>
+    </li>
+  </ol>
+</p>
+
+
+<h1>Linux</h1>
+
+<p class="one_line_heading">
+
+  The following distributions provide pyspread as a package
+  (latest release linked):
+  <br> <br>
+  <table style=" text-align: left; width: 325px;" border="0"
+    cellpadding="4" cellspacing="0">
+    <tbody>
+      <tr>
+        <td style="text-align: center;"><img style=" width:
+            24px; height: 24px;" alt="Arch logo"
+            src="http://manns.github.io/pyspread/images/arch-logo-small.png"
+            align="middle"><br>
+        </td>
+        <td style="text-align: left;">Arch</td>
+        <td><a
+            href="https://aur.archlinux.org/packages/pyspread/">pyspread
+            v0.3.2</a><br>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: center;"><img style=" width:
+            20px; height: 24px;" alt="Debian logo"
+            src="http://manns.github.io/pyspread/images/debian-logo-small.png"
+            align="middle"></td>
+        <td style="text-align: left;">Debian</td>
+        <td><a
+            href="https://packages.debian.org/de/sid/pyspread">pyspread
+            v0.3.3</a></td>
+      </tr>
+      <tr>
+        <td style="text-align: center;"><img style=" width:
+            23px; height: 24px;" alt="Mageia logo"
+            src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
+            align="middle"></td>
+        <td style=" text-align: left;">Mageia</td>
+        <td><a href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
+            v0.3.3</a></td>
+      </tr>
+      <tr>
+        <td style="text-align: center;"><img style=" width:
+            24px; height: 24px;" alt="Slackware logo"
+            src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
+        </td>
+        <td style="text-align: left;">Slackware</td>
+        <td><a
+            href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
+            v0.3.2</a></td>
+      </tr>
+      <tr>
+        <td style="vertical-align: top; text-align: center;"><img
+            style=" width: 24px; height: 24px;" alt="Ubuntu
+            logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
+            align="middle"></td>
+        <td style="vertical-align: top;">Ubuntu</td>
+        <td style="vertical-align: top;"><a
+            href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
+            v0.3.3</a></td>
+      </tr>
+    </tbody>
+  </table>
+  <br>
+
+  For these distributions, the easiest way is to install
+  pyspread from the repositories. The source distribution can
+  also be used e.g. if the packaged version is outdated.
+
+</p>
+
+
+<h1>Windows</h1>
+
+<p class="one_line_heading">
+
+  For Windows, please follow these instructions. In order to make Windows
+  installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
+  <ol>
+    <li>Download and install Python, numpy and matplotlib.
+      You can find 32bit and 64bit packages of WinPython <a
+        href="http://winpython.sourceforge.net/">here</a>.
+      Make sure to get the Python2 version.
+      If WinPython is used then the WinPython control panel is recommended for all installations.<br> <br>
+    </li>
+    <li>Download and install Cairo and pycairo. Working binaries are available <a
+        href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by maunually copying it. Make sure to read the installation instructions.<br>
+      <br>
+    </li>
+    <li>Download and install <a
+        href="http://www.wxpython.org/download.php#stable">wxPython 2.8.x</a>.<br>
+      <br>
+    </li>
+    <li>Download and install gnupg (<a
+        href="http://www.gpg4win.org/">Gpg4win</a> supports
+      32&amp;64bit)<br>
+      <br>
+    </li>
+    <li>Download and install <a
+        href="http://pythonhosted.org/python-gnupg/#download">python-gnupg</a>.<br>
+      <br>
+      For&nbsp; <span style="font-weight: bold;">32 bit
+        systems</span>, an exe installer
+      (python-gnupg-0.3.4.win32.exe) is provided on the linked
+      page.<br>
+      <br>
+      For <span style="font-weight: bold;">64 bit systems</span>,
+      the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
+      to be extracted (e. g. with 7zip) and installed as
+      follows:<br>
+      <br>
+    </li>
+    <li>Download and install the source distribution of pyspread<br>
+      <br>
+    </li>
+    <li>Start pyspread by double-clicking on the file
+      pyspread.bat in the extraction directory</li>
+  </ol>
+
+</p>
+
+
+<h1>OS X</h1>
+
+<p class="one_line_heading">
+
+  Pyspread is not officially supported on OS/X. However, the source
+  distribution has been reported to work.
+
+</p>
+
+
+<p class="impressum">
+  Copyright
+  <a href="mailto:mmanns <at> gmx <dot> net">
+    Martin Manns (mmanns &lt; at &gt; gmx &lt; dot &gt; net)
+  </a>
+  <br> <br>
+  Last changed: 28. December  2014</span>
+</p>
