--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -1,4 +1,11 @@
 <aside>
+
+  <br> <br>
+  <a href="images/screenshot_wagner_large.png">
+    <img alt="Pyspread screenshot"
+         src="images/screenshot_wagner_thumb.png"
+         style="border: 0px solid ; width: 200px; height: 157px;"></a>
+
 </aside>
 
 
@@ -30,9 +37,9 @@ The following optional dependencies improve user experience:
     (&gt;=0.3.0, for opening own files without approval) <br>
   </li>
   <li> <a href="http://www.python-excel.org/">xlrd</a>
-    (&gt;=0.9.2, for loading Excel<sup>&reg;</sup> files)</li>
+    (&gt;=0.9.2, for loading Excel files)</li>
   <li><a href="http://www.python-excel.org/">xlwt</a>
-    (&gt;=0.9.2, for saving Excel<sup>&reg;</sup> files)</li>
+    (&gt;=0.9.2, for saving Excel files)</li>
   <li><a href="http://jedi.jedidjah.ch">jedi</a>
     (&gt;=0.8.0, for tab completion and context help in the
     entry line)</li>
@@ -54,7 +61,7 @@ The following optional dependencies improve user experience:
   <br> <br>
   Installation:
   <br>
-  <ol>
+  <ol class="one_line_heading">
     <li>
       Ensure that <span style="text-decoration: underline;">all</span>
       dependencies are installed.
@@ -155,7 +162,7 @@ The following optional dependencies improve user experience:
 
   For Windows, please follow these instructions. In order to make Windows
   installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
-  <ol>
+  <ol class="one_line_heading">
     <li>Download and install Python, numpy and matplotlib.
       You can find 32bit and 64bit packages of WinPython <a
         href="http://winpython.sourceforge.net/">here</a>.
